header and game window no longer overlap

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 canvas { 
+    margin-top:32px;
     padding:0; 
     border:0; 
     user-select:none; 
@@ -24,6 +25,7 @@ canvas {
     top:0px;
     left:0px;
     width:100%;
+    height:16px;
     padding:8px;
     font-size:16px;
     color:white;
